fixed whitespace, changed weather icons

--- a/src/app/today/today.component.css
+++ b/src/app/today/today.component.css
@@ -1,4 +1,5 @@
 .container{
+
     width: 350px; 
     height: 500px;   
     background-color: #FFF;
@@ -21,15 +22,21 @@
 h1 {
     text-align: center;
     font-weight: 500;
+    margin-top: 1rem;
 }
 
 hr {
+    margin: 0 auto;
+    margin-top: 1rem;
     width: 80%;
+    margin-bottom: 1rem;
+    
 }
 
 img {
-    height: 125px;
-    width: 125px;
+    height: 150px;
+    width: 150px;
+    margin-bottom: 1rem;
 }
 
 .wrapper {
@@ -88,11 +95,12 @@ img {
 
 .astro {
     margin-top: 1.6rem;
+    margin-bottom: 1rem;
 }
 
 .hey {
     margin-top: 1.6rem;
-    margin-bottom: 1.6rem;
+    margin-bottom: 4rem;
 }
 
 
